finished rendering element with partials

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
-var added_comment = $("<p><%= @comment.body %></p>");
+var added_comment = $("<%= escape_javascript(render 'comments/comment', comment: @comment) %>");
 
 $("#<%= dom_id(@comment.photo) %>_new_comment_form").before(added_comment);
